complete project exam-api

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>exam-eureka</module>
+        <module>exam-item</module>
+        <module>exam-api</module>
     </modules>
 
     <parent>
