--- a/exam-item/src/main/resources/application.yml
+++ b/exam-item/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
-  port: 10001
+  port: 7002
 spring:
   application:
     name: item-server
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=truc&characterEncoding=utf8&serverTimezone=UTC
+    url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=truc&characterEncoding=utf8&serverTimezone=Hongkong
     username: root
     password: root
 eureka:
