add and complete project exam-gateway

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
         <module>exam-eureka</module>
         <module>exam-item</module>
         <module>exam-api</module>
+        <module>exam-gateway</module>
     </modules>
 
     <parent>
