add and complete project exam-page

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>exam-item</module>
         <module>exam-api</module>
         <module>exam-gateway</module>
+        <module>exam-page</module>
     </modules>
 
     <parent>
